--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -13,32 +13,30 @@
   --red-rgb: 237 41 57;
   --blue-rgb: 0 48 143;
   --green-rgb: 23 177 105;
-  --yellow-rgb: 255, 191, 0;
-  
-  --background-rgb: 27, 18, 18;
+  --yellow-rgb: 255 191 0;
+  --background-rgb: 105 105 105;
 }
 
 /* Grid Container */
 .grid-container {
-  width: 100rem;
+  width: 130rem;
   aspect-ratio: 1;
   display: grid;
-  grid-template-rows: repeat(40, 1fr);
-  grid-template-columns: repeat(40, 1fr);
+  grid-template-rows: repeat(50, 1fr);
+  grid-template-columns: repeat(50, 1fr);
   position: absolute;
-  transform: rotateX(50deg) rotateY(-5deg) rotateZ(20deg) scale(1.25);
+  transform: rotateX(50deg) rotateY(-5deg) rotateZ(20deg) scale(1.3);
 }
 
 /* Background Effects */
 .grid-container::before {
-  content: "";
+  content: " ";
   position: absolute;
   inset: 0px;
   pointer-events: none;
   z-index: 2;
   background-image: url(./assets/plus-small-removebg-preview__1_-removebg-preview.png);
-  background-size: 5%;
-  background-repeat: repeat;
+  background-size: 4%;
   opacity: 0.1;
 }
 
