--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -35,7 +35,7 @@
   inset: 0px;
   pointer-events: none;
   z-index: 2;
-  background-image: url(./assets/plus-small-removebg-preview__1_-removebg-preview.png);
+  background-image: url(../public/images/plus-small-removebg-preview__1_-removebg-preview.png);
   background-size: 4%;
   opacity: 0.1;
 }
